// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component renders correctly 1`] = `
<div
  className="container login-container"
>
  <div>
    <div
      className="page-header"
    >
      <h1>
        <small>
          Login to report a bug:
        </small>
      </h1>
    </div>
    <label
      className="login-username control-label"
      htmlFor={undefined}
    >
      Username
      <input
        className="form-control"
        id={undefined}
        onChange={[Function]}
        placeholder="username..."
        type="text"
      />
    </label>
    <br />
    <label
      className="login-password control-label"
      htmlFor={undefined}
    >
      Password
      <input
        className="form-control"
        id={undefined}
        onChange={[Function]}
        placeholder="password..."
        type="password"
      />
    </label>
    <br />
    <button
      className="login-button btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Log In
    </button>
    <br />
  </div>
  <div>
    <div
      className="page-header"
    >
      <h1>
        <small>
          Don't have an account? Sign up:
        </small>
      </h1>
    </div>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={undefined}
      type="button"
    >
      Signup
    </button>
  </div>
</div>
`;

exports[`Signup component renders correctly 1`] = `
<div
  className="container signup-container"
>
  <div
    className="page-header"
  >
    <h1>
      <small>
        Signup
      </small>
    </h1>
  </div>
  <label
    className="signup-username control-label"
    htmlFor={undefined}
  >
    Username
    <input
      className="form-control"
      id={undefined}
      onChange={[Function]}
      placeholder="username..."
      type="text"
    />
  </label>
  <br />
  <label
    className="signup-username control-label"
    htmlFor={undefined}
  >
    First Name
    <input
      className="form-control"
      id={undefined}
      onChange={[Function]}
      placeholder="first name..."
      type="text"
    />
  </label>
  <br />
  <label
    className="signup-username control-label"
    htmlFor={undefined}
  >
    Last Name
    <input
      className="form-control"
      id={undefined}
      onChange={[Function]}
      placeholder="last name..."
      type="text"
    />
  </label>
  <br />
  <label
    className="signup-password control-label"
    htmlFor={undefined}
  >
    Password
    <input
      className="form-control"
      id={undefined}
      onChange={[Function]}
      placeholder="password..."
      type="password"
    />
  </label>
  <br />
  <label
    className="signup-password control-label"
    htmlFor={undefined}
  >
    Type Password Again
    <input
      className="form-control"
      id={undefined}
      onChange={[Function]}
      placeholder="password..."
      type="password"
    />
  </label>
  <br />
  <div
    className="col-centered"
  >
    <div
      className="btn-toolbar"
      role="toolbar"
    >
      <button
        className="sign-up-button btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Create Account
      </button>
      <button
        className="sign-up-button btn btn-primary"
        disabled={false}
        onClick={undefined}
        type="button"
      >
        Return to log in page
      </button>
    </div>
  </div>
</div>
`;
